Refactor how ParserPage info is built and passed around